test/fails/bad_parsing/tag_out_of_order3.lgl
declare int f();
tag s is vec2;

void main() {
    return;
}